tests/build/cases/widget/always_use_inherited_property.stderr
error: expected warning @ line 15
  --> cases/widget/always_use_inherited_property.rs:29:5
   |
29 |     compile_error!("expected warning @ line 15")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `zero_ui::properties::margin`
  --> cases/widget/always_use_inherited_property.rs:15:9
   |
15 |     use zero_ui::properties::margin;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
  --> cases/widget/always_use_inherited_property.rs:13:1
   |
13 | pub mod test_widget {
   | ^^^^^^^^^^^^^^^^^^^
